--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1 id="heading">Board Buddy</h1>
-    </header>
-    <nav class="navigation">
+    <!-- <nav class="navigation">
         <li>Forums</li>
         <li>Friends</li>
         <li>Home</li>
         <li>Open Chat</li>
         <li>Profile</li>
-    </nav>
+    </nav> -->
+    <div id="root"></div>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
